# Falcon9

./: CMakeLists.txt  FALCON9_LIFTOFF_ALGORITHM.md  README.md  README_CLANG_CODEX.md  REENTRY_LANDING_GUIDANCE_PLAN.md  falcon9_gui_planner.cpp  planner_comm_bridge.cpp  planner_lvd.cpp  planner_lvd.hpp  planner_mission.cpp  planner_mission.hpp  planner_recovery.cpp  planner_recovery.hpp  planner_smoke.cpp  planner_upfg.cpp  planner_upfg.hpp
.claude/: settings.local.json
GFOLD/cpg_solver/: CMakeLists.txt
GFOLD/cpg_solver/GFOLD_solver/: GFOLD_solver.cpp  GFOLD_solver.hpp  GFOLD_solver_2d_n50.cpp
GFOLD/scripts/: kos_planner_main.ks
GFOLD/solver_py/: config.py  solver.py
config/: falcon9_real_defaults.txt
script/: kos_planner_main.ks
